# micrograd-in-cpp

./: .gitignore  CMakeLists.txt  engine-mc.py
inc/: MLP.hpp  layer.hpp  module.hpp  neuron.hpp  utils.hpp  value.hpp
src/: MLP.cpp  layer.cpp  main.cpp  module.cpp  neuron.cpp  value.cpp
